--- a/example/Do it! HTML+CSS+자바스크립트 웹 표준의 정석_본문_예제소스_220311/03/structure.html
+++ b/example/Do it! HTML+CSS+자바스크립트 웹 표준의 정석_본문_예제소스_220311/03/structure.html
@@ -22,7 +22,7 @@
         </ul>
       </nav>
     </header>
-    <main class="contents">
+    <main class="contents">   <!-- <main>는 웹 문서에서 한 번만 사용할 수 있다.-->
       <section id="headling">
         <h2>몸과 마음이 치유되는 섬</h2>                  
         <div class="detail"> 
