--- a/example/Do it! HTML+CSS+자바스크립트 웹 표준의 정석_본문_예제소스_220311/04/poster-table.html
+++ b/example/Do it! HTML+CSS+자바스크립트 웹 표준의 정석_본문_예제소스_220311/04/poster-table.html
@@ -18,10 +18,32 @@
       <li>입춘맞이 : 1/27(월) ~ 1/31(금)</li>
       <li>낭쉐코사 : 2/1(토)</li>
       <li>거리굿 : 2/2(일)</li>
-      <li>열림굿 : 2/3(월)</li>
+      <li>열림굿 : 2/3(월)</li
       <li>입춘굿 : 2/4(화)</li>
     </ul>
     <h2>먹거리</h2>
+    <table>
+      <tr>
+        <th>입춘 천냥 국수</th>
+        <td>11:00 ~ 16:00</td>
+        <td>목관이 주차장</td>
+      </tr>
+      <tr>
+        <th>제주 향토 음식</th>
+        <td>10:30 ~ 17:00</td>
+        <td>관덕정 마당</td>
+      </tr>
+      <tr>
+        <th>입춘 주전부리</th>
+        <td>10:30 ~ 17:00</td>
+        <td>관덕정 마당</td>
+      </tr>
+      <tr>
+        <>차 나눔</th>
+        <td>10:30 ~ 17:00</td>
+        <td>관덕정 마당</td>
+      </tr>
+    </table>
   </div>
 </body>
 </html>
