--- a/example/Do it! HTML+CSS+자바스크립트 웹 표준의 정석_본문_예제소스_220311/04/audio-1.html
+++ b/example/Do it! HTML+CSS+자바스크립트 웹 표준의 정석_본문_예제소스_220311/04/audio-1.html
@@ -8,7 +8,7 @@
 <body>
   <div id="container">
     <img src="images/tangerines.jpg" alt="레드향">
-    <audio src="medias/spring.mp3" controls></audio>
+    <audio src="medias/spring.mp3" controls></audio> <!--controls은 컨트롤바를 사용할 수 있음을 나타냄-->
     <h1>레드향</h1>
     <p>껍질에 붉은 빛이 돌아 <b>레드향</b>이라 불린다.</p>
     <p>레드향은 <em>한라봉과 귤을 교배</em>한 것으로<br>일반 귤보다 2~3배 크고, 과육이 붉고 통통하다.</p>
