--- a/example/Do it! HTML+CSS+자바스크립트 웹 표준의 정석_본문_예제소스_220311/05/quiz-2.html
+++ b/example/Do it! HTML+CSS+자바스크립트 웹 표준의 정석_본문_예제소스_220311/05/quiz-2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--textarea가 container 밖으로 벗어남. css 수정이 필요한 듯-->
 <html lang="ko">
   <head>
     <meta charset="UTF-8">
@@ -22,7 +23,37 @@
 			<p>HTML, CSS, Javascript에 대한 기술적 이해와 경험이 있는 분을 찾습니다.</p>
 			<hr>
 			<form>
-				
+				<h3>개인 정보</h3>
+				<ul>
+					<li>
+						<label for="name">이름</label>
+						<input type="text" id="name" placeholder="공백 없이 입력하세요">
+					</li>
+					<li>
+						<label for="phone">연락처</label>
+						<input type="tel" id="phone">						
+					</li>
+				</ul>	
+				<h3>지원 분야</h3>
+				<ul>
+					<li>
+						<label><input type="checkbox" value="webpub">웹 퍼블리싱</label>
+					</li>
+					<li>
+						<label><input type="checkbox" value="webdev">웹 애플리케이션 개발</label>
+					</li>
+					<li>
+						<label><input type="checkbox" value="devenv">개발 환경 개선</label>
+					</li>
+				</ul>
+				<label>
+					<h3>지원 동기</h3>				
+					<textarea id="applying" cols="60" rows="5" placeholder="본사 지원 동기를 간략히 써 주세요"></textarea>	
+				</label>	
+				<div>
+					<button type="submit">접수하기</button>
+					<button type="reset">취소하기</button>
+				</div>
 			</form>
 		</div>
   </body>
