--- a/example/07/quiz-3.html
+++ b/example/07/quiz-3.html
@@ -3,12 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>연습문제 3</title>
+  <style>
+    table {
+      caption-side: bottom;
+      border: 1px solid black;
+      border-collapse: collapse ;
+    }
+    td, th {
+      border: 1px solid black;
+      padding: 10px;
+    }
+    .heading {
+      background-color: #eee;
+    }
+  </style>
 </head>
 <body>
-  <table border="1">
+  <table>
     <caption>2019 국민 독서실태</caption>
+    <!--종이책 전자책 오디오북 class 설정 대신 이 위치에-->
+    <!--col class="heading"-->
     <thead>
-      <tr>
+      <tr class="heading">
         <th>구분</th>
         <th>성인</th>
         <th>독서자</th>
@@ -16,17 +32,17 @@
     </thead>
     <tbody>
       <tr>
-        <th>종이책</th>
+        <th class="heading">종이책</th>
         <td>6.1권</td>
         <td>11.8권</td>
       </tr>
       <tr>
-        <th>전자책</th>
+        <th class="heading">전자책</th>
         <td>1.2권</td>
         <td>7.1권</td>
       </tr>
       <tr>
-        <th>오디오북</th>
+        <th class="heading">오디오북</th>
         <td>0.2권</td>
         <td>5.5권</td>
       </tr>      
