--- a/example/07/text-transform.html
+++ b/example/07/text-transform.html
@@ -18,6 +18,6 @@
 <body>
   <p class="trans1">html</p> 
   <p class="trans2">css</p>
-  <p class="trans3">javascript</p>
+  <p class="trans3">JAVASCPIPT</p>
 </body>
 </html> 
