--- a/example/07/css-color.html
+++ b/example/07/css-color.html
@@ -5,6 +5,17 @@
   <title>탐라국 입춘굿</title>
   <link rel="stylesheet" href="css/basic.css">
 </head>
+<style>
+  h1 {
+    color: rgb(144, 42, 165);
+  }
+  h2 {
+    color: rgb(0, 0, 255);
+  }
+  li {
+    color: green;
+  }
+</style>
 <body>
   <div id="container">    
     <h1>탐라국 입춘굿</h1>    
