--- a/example/07/quiz-1.html
+++ b/example/07/quiz-1.html
@@ -12,7 +12,15 @@
 			.subject {
 				font-weight:700;
 				font-size:larger;
+				color: #ad3000;
 			}
+			ul {
+				list-style-type: none;
+			}
+			li {
+				line-height: 2.0;
+			}
+
     </style>
   </head>
   <body>
