--- a/example/08/quiz-2.html
+++ b/example/08/quiz-2.html
@@ -22,6 +22,7 @@
 			width:100%;
 			height:50px;
 			background-color:#222;
+			clear: left
 		}
 		footer > p {
 			color:#fff;
@@ -29,7 +30,15 @@
 			text-align: center;
 			line-height:50px;
 		}
-</style>
+		article {
+			float: left;
+			width: 350px;
+			height: 200px;
+			margin: 10px;
+			padding: 10px;
+			border: 1px solid #ccc;
+		}
+	</style>
 </head>
 <body>
 <section>
