--- a/example/08/quiz-3.html
+++ b/example/08/quiz-3.html
@@ -7,10 +7,18 @@
 			a:link, a:visited {
 				color:black;
 				text-decoration: none;
+				display: block;
+				background-color: #ccc;
 			}
 			a:hover {
 				background-color:#000;
 				color:#fff;
+			}
+			ul {
+				list-style-type: none;
+			}
+			li {
+				float: left;
 			}
 		</style>
 	</head>
