--- a/example/09/sol-3.html
+++ b/example/09/sol-3.html
@@ -13,7 +13,7 @@
 			height:700px;
 			border:1px dotted gray;
       padding:20px;        
-      background:#fff url('images/mic.png') no-repeat right bottom;        
+      background:#fff url('images/mic.png') right bottom no-repeat;        
 		}
 		img {	
 			margin:30px 10px 30px 180px;
