--- a/example/09/quiz-3.html
+++ b/example/09/quiz-3.html
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">    
   <title>연습문제 3</title>
   <style>   
+		body {
+			background-color: #02233b;
+		}
 		#container{
 			margin:0 auto;	
 			width:600px;
 			height:700px;
 			border:1px dotted gray;
 			padding:20px;
+			background: white url(images/mic.png) right bottom no-repeat;
 		}
 		img {	
 			margin:30px 10px 30px 180px;
@@ -17,6 +21,8 @@
 		h1 {
 			text-align:center;
 			padding:20px;
+			background-color: #004344;
+			color: white;
 		}
 		h2 {
 			text-align:center;
