--- a/example/14/age.html
+++ b/example/14/age.html
@@ -6,6 +6,15 @@
     <title>나이 계산하기</title>
 </head>
 <body>
+    <script>
+        var currentYear = 2025; //기준연도
+        var birthYear;  //태어난 연도
+        var age;    //저장할 나이
 
+        birthYear = prompt("태어난 연도를 입력하세요. (YYYY)", "");
+        age = currentYear - birthYear +1;
+        document.write(currentYear + "년 현재<br>");
+        document.write(birthYear + "년에 태어난 사람의 나이는 " + age + "세입니다.");
+    </script>
 </body>
 </html>
