--- a/example/14/quiz-1.html
+++ b/example/14/quiz-1.html
@@ -4,12 +4,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>연습문제 1</title>
+	<style>
+		body {
+			font-size: 1.2em;
+			text-align: center;
+		}
+	</style>
 </head>
 <body>
 	<h2>4의 배수일까 아닐까</h2>
 
 	<script>
-	
+		var inputNum = prompt("숫자를 입력하세요.", "");
+
+		if (inputNum !== null) {
+			if (inputNum%4 === 0) {
+				document.write(inputNum + "는 4의 배수입니다.");
+			} else {
+				document.write(inputNum + "는 4의 배수가 아닙니다.");
+			}
+		}
 	</script>
 </body>
 </html>
