--- a/example/14/seat-1.html
+++ b/example/14/seat-1.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>자리 배치도</title>
+  <style>
+    table, td {
+      border: 1px solid #ccc;
+      border-collapse: collapse;
+    }
+    td {
+      padding: 5px;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
 <body>
   <h1>자리 배치도</h1>
@@ -15,8 +25,19 @@
       rowNum = parseInt(memNum / colNum);
     else
       rowNum = parseInt(memNum / colNum) + 1;
-
-    document.write("모두 " + rowNum + "개의 줄이 필요합니다.");
+    
+    document.write("<table>");
+    //document.write("모두 " + rowNum + "개의 줄이 필요합니다.");
+    for(i=0;i<rowNum;i++) {
+      document.write("<tr>")
+      for(j=1;j<=colNum;j++) {
+        seatNo = i * colNum + j; //좌석 번호
+        if(seatNo > memNum) break;
+        document.write("<td> 좌석 " + seatNo + "</td>"); 
+      }
+      document.write("</tr>"); //줄바꾸기
+    }
+    document.write("</table>")
   </script>
 </body>
 </html>
