--- a/example/14/seat.html
+++ b/example/14/seat.html
@@ -7,6 +7,16 @@
 </head>
 <body>
   <h1>자리 배치도</h1>
-    
+  <script>
+    var memNum = prompt("입장객은 몇 명인가요?"); //전체 입장객 수
+    var colNum = prompt("한 줄에 몇 명씩 앉습니까?");    //한 줄에 앉을 사람 수
+
+    if(memNum % colNum === 0)
+      rowNum = parseInt(memNum/colNum); //parseInt() : 괄호 안의 값을 정수로 변환
+    else
+      rowNum = parseInt(memNum/colNum) + 1;
+
+    document.write("모두 " + rowNum + "개의 줄이 필요합니다.");
+  </script>  
 </body>
 </html>
