--- a/example/15/quiz-2.html
+++ b/example/15/quiz-2.html
@@ -6,6 +6,21 @@
 	<title>연습문제 2</title>
 </head>
 <body>
-	
+	<script>
+		num1 = prompt("비교할 첫 번째 숫자:");
+		num2 = prompt("비교할 두 번째 숫자");
+
+		biggerNum(num1, num2);
+		
+		function biggerNum(num1, num2) {
+			if (num1>num2) {
+				alert(num1 + "이" + num2 + "보다 큽니다.");
+			} else if (num1 < num2) {
+				alert(num2 + "이" + num1 + "보다 큽니다.");
+			} else if (num1 === num2) {
+				alert("같습니다.");
+			}
+		}
+	</script>	
 </body>
 </html>
