--- a/example/17/lightbox.html
+++ b/example/17/lightbox.html
@@ -20,5 +20,25 @@
     <div id="lightbox">
 			<img src="images/tree-1.jpg" alt="" id="lightboxImage">			
     </div>
+    <script>
+      var pics = document.getElementsByClassName("pic"); //pic인 요소를 전부 가져옴
+      var lightbox = document.getElementById("lightbox");    //라이트 박스 요소를 전부 가져옴
+      var lightboxImage = document.getElementById("lightboxImage"); //라이트 박스 이미지 요소를 가져옴
+
+      for(i = 0; i < pics.length; i++) {
+        pics[i].addEventListener("click", showLightbox); //pic 배열의 i번째 요소를 클립할 경우 showLightbox 함수를 실행
+      }
+
+      function showLightbox() {
+        var bigLocation = this.getAttribute("data-src");  //섬네일 이미지의 속성값을 가져옴
+        lightboxImage.setAttribute("src", bigLocation); //라이트 박스의 이미지 경로 수정
+        lightbox.style.display = "block";   //라이트 박스 이미지르 화면에 표시
+      }
+
+      lightbox.onclick = function() {
+        lightbox.style.display = "none";    //라이트 박스 요소를 화면에서 감춤
+      }
+
+    </script>
   </body>
 </html>
