--- a/example/17/nodeCreate.html
+++ b/example/17/nodeCreate.html
@@ -12,10 +12,24 @@
     <p>공부할 주제를 기록해 보세요</p>
     <form action="">
       <input type="text" id="subject" autofocus>
-      <button>추가</button>
+      <button onclick="newRegistr(); return false;">추가</button>
     </form>
-    <hr>  
+    <hr>
     <ul id="itemList"></ul>  
   </div>
+  <script>
+    function newRegistr() {
+      var newItem = document.createElement("li"); //새로운 li 요소 노드 생성
+      var subject = document.querySelector("#subject"); //폼의 텍스트 필드를 가져옴
+      var newText = document.createTextNode(subject.value); //필드값을 텍스트 노드로 추가
+      newItem.append(newText);  //텍스트 노드를 자식노드로 연결
+
+      var itemList = document.querySelector("#itemList"); //부모 노드를 가져옴
+      itemList.appendChild(newItem);    //새로 만든 요소 노드를 부모 노드 맨 끝에 추가
+      //itemList.insertBefore(newItem, itemList.childNodes[0]); //노드를 맨앞에 추가
+
+      subject.value = ""; //다음 입력을 위해 텍스트 필드 비우기
+    }
+  </script>
 </body>
 </html>
