--- a/example/17/nodeDelete.html
+++ b/example/17/nodeDelete.html
@@ -24,12 +24,22 @@
       var newItem = document.createElement("li");  // 요소 노드 추가
       var subject = document.querySelector("#subject");  // 폼의 텍스트 필드
       var newText = document.createTextNode(subject.value);  // 텍스트 필드의 값을 텍스트 노드로 만들기
+
       newItem.appendChild(newText);  // 텍스트 노드를 요소 노드의 자식 노드로 추가
 
       var itemList = document.querySelector("#itemList");  // 웹 문서에서 부모 노드 가져오기 
       itemList.insertBefore(newItem, itemList.childNodes[0]);  // 자식 노드중 첫번째 노드 앞에 추가
 
       subject.value="";
+
+      var items = document.querySelectorAll("li");    //모든 항목 가져오기
+      
+      for(i=0;i<items.length;i++) {
+        items[i].addEventListener("click", function() { //항목을 클릭하면 실행할 함수
+          if(this.parentNode) //부모 노드가 있다면
+            this.parentNode.removeChild(this);
+        });
+      }
     }
 	</script>
 </body>
