--- a/example/16/day.html
+++ b/example/16/day.html
@@ -30,6 +30,17 @@
     <p><span class="accent" id="result"></span>일 연속으로 <br> 책 읽기를 달성했군요.</p>
     <p>축하합니다!</p>
   </div>  
+  <script>
+    var now = new Date("2020-10-25"); //오늘 날짜를 객체로 지정
+    var firstDay = new Date("2020-10-01");  //시작 날짜를 객체로 지정
 
+    var toNow = now.getTime();  //오늘까지 지난 시간(밀리초)
+    var toFirst = firstDay.getTime(); //첫날가지 지난 시간(밀리초)
+    var passedTime = toNow - toFirst; //첫날부터 오늘까지 지난 시간(밀리초)
+
+    passedTime = Math.round(passedTime/(1000*60*60*24));  //밀리초(1/1000)를 일수로 계산하고 반올림
+
+    document.querySelector('#result').innerText = passedTime;
+  </script>
 </body>
 </html>
