--- a/example/16/event.html
+++ b/example/16/event.html
@@ -14,5 +14,14 @@
   </head>
   <body>    
     <h1>당첨자 발표</h1>
+    <script>
+      var seed = prompt("전체 응모자 수: ", "");  //응모자 수 입력받기
+      var picked = Math.floor((Math.random() * seed) +1); //무작위 수 뽑기
+
+      document.write("전체 응모자 수: " + seed + "명");
+      document.write("<br>");
+
+      document.write("당첨자 : " + picked + "번");
+    </script>
   </body>
 </html>
