--- a/example/17/quiz-2.html
+++ b/example/17/quiz-2.html
@@ -4,8 +4,54 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>연습문제 2</title>
+	<style>
+		form {
+      margin-bottom:30px;
+    }
+    input[type="text"] {
+      width:30px;
+      height:20px;
+      text-align: center;
+    }
+    button {
+      margin-left:10px;
+    }
+    table {
+      width:300px;      
+    }
+    table, td {
+      border:1px solid #ccc;
+      border-collapse: collapse;
+    }
+    td {
+      padding:10px;
+    }
+	</style>
 </head>
 <body>
-	
+	<input type="text" id="row" value="1">행
+	<input type="text" id="column" value="1">열
+	<button onclick="createTable(); return false">작성</button>
+	<div id="context"></div>
+	<script>
+		function createTable() {
+			var rowData = document.querySelector("#row").value;
+			var columnData = document.querySelector("#column").value;
+			var tableNode = document.createElement("table");
+		
+			for(i=0;i<rowData;i++) {
+				var newRow = document.createElement("tr");
+				for(j=0;j<columnData;j++) {
+					var newCell = document.createElement("td");
+					var cellText = document.createTextNode(i + ", " + j);
+					newCell.appendChild(cellText);
+					newRow.appendChild(newCell);
+				}
+				tableNode.appendChild(newRow);
+			}
+			var newContents = document.querySelector("#context");
+			newContents.appendChild(tableNode);
+		}
+	</script>	
 </body>
 </html>
